tests/error/comptime_expr_errors/use_generic_type.py
from guppylang import guppy
from guppylang.std.builtins import comptime

T = guppy.type_var("T")


@guppy
def foo(x: T) -> None:
    comptime(T)


@guppy
def main() -> None:
    foo(42)


main.compile()
