tests/error/comptime_expr_errors/use_generic_type.err
Error: Not compile-time evaluatable (at $FILE:9:13)
  | 
7 | @guppy
8 | def foo(x: T) -> None:
9 |     comptime(T)
  |              ^ Value of type variable `T` cannot be accessed in a comptime
  |                expression

Guppy compilation failed due to 1 previous error
